Add text to trigger workflow

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <body>
     <p>Hello, GitHub! I am learning to make a website! Please enjoy watching this grow into a functional website.</p>
+	<p>I am adding more text to have something to push, in order to trigger the GitHub workflow.</p>
 </body>
 </html>
