Add <h2> and an about me explanation

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,12 @@
     <title>Austin Dart - Making A Website</title>
 </head>
 <body>
-    <h1>Brief Greeting</h1>
+    <h1>Making A Website</h1>
+    <h2>Brief Greeting</h2>
     <p>Hello, GitHub! I am learning to make a website! Please enjoy watching this grow into a functional website.</p>
+    <h2>About Me</h2>
+    <p>I am Austin Dart. I am a Java developer who has spent much of my time making Bukkit/Spigot plugins. I am now beginning my journey as a web developer, 
+        hoping to learn HTML, CSS, and JavaScript. This website is going to be the project by which I (and you) can see my progress.
+    </p>
 </body>
 </html>
