Add a link to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,8 @@
     <p>I am Austin Dart. I am a Java developer who has spent much of my time making Bukkit/Spigot plugins. I am now beginning my journey as a web developer, 
         hoping to learn HTML, CSS, and JavaScript. This website is going to be the project by which I (and you) can see my progress.
     </p>
+    <h2>Source Code</h2>
+    <p>The source code for this website is (and always will be) publicly available. Right now, it is available at 
+        <a href="https://github.com/AustinDart/Making-A-Website">https://github.com/AustinDart/Making-A-Website</a></p>
 </body>
 </html>
