Add line break and selfie

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,12 @@
     <p>Hello, GitHub! I am learning to make a website! Please enjoy watching this grow into a functional website.</p>
     <h2>About Me</h2>
     <p>I am Austin Dart. I am a Java developer who has spent much of my time making Bukkit/Spigot plugins. I am now beginning my journey as a web developer, 
-        hoping to learn HTML, CSS, and JavaScript. This website is going to be the project by which I (and you) can see my progress.
+        hoping to learn HTML, CSS, and JavaScript. This website is going to be the project by which I (and you) can see my progress. Here's a picture of my face:<br>
+        <img src="images/selfie.jpg" width="132" height="256">
     </p>
     <h2>Source Code</h2>
     <p>The source code for this website is (and always will be) publicly available. Right now, it is available at 
-        <a href="https://github.com/AustinDart/Making-A-Website">https://github.com/AustinDart/Making-A-Website</a></p>
+        <a href="https://github.com/AustinDart/Making-A-Website">https://github.com/AustinDart/Making-A-Website</a>
+    </p>
 </body>
 </html>
