--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
     <h2>About Me</h2>
     <p>I am Austin Dart. I am a Java developer who has spent much of my time making Bukkit/Spigot plugins. I am now beginning my journey as a web developer, 
         hoping to learn HTML, CSS, and JavaScript. This website is going to be the project by which I (and you) can see my progress. Here's a picture of my face:<br>
-        <img src="images/selfie.jpg" width="132" height="256">
+        <img src="images/selfie.jpg" width="132" height="256"><br>
+		Please note that while the code for this website is licensed under the Unlicense (that is, it is essentially within the public domain), the photo is NOT. I own 
+		this photograph and it is not to be used by anyone else (not really sure why you would want to, either).
     </p>
     <h2>Source Code</h2>
     <p>The source code for this website is (and always will be) publicly available. Right now, it is available at 
