Move text-align to <body>

--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,19 @@
 <head>
     <title>Austin Dart - Making A Website</title>
 </head>
-<body style="background-color:black">
-    <h1 style="color:white; text-align:center;">Making A Website</h1>
-    <h2 style="color:red; text-align:center;">Brief Greeting</h2>
-    <p style="color:white; text-align:center;">Hello, GitHub! I am learning to make a website! Please enjoy watching this grow into a functional website.</p>
-    <h2 style="color:red; text-align:center;">About Me</h2>
-    <p style="color:white; text-align:center;">I am Austin Dart. I am a Java developer who has spent much of my time making Bukkit/Spigot plugins. I am now beginning my journey as a web developer, 
+<body style="background-color:black; text-align:center;">
+    <h1 style="color:white;">Making A Website</h1>
+    <h2 style="color:red;">Brief Greeting</h2>
+    <p style="color:white;">Hello, GitHub! I am learning to make a website! Please enjoy watching this grow into a functional website.</p>
+    <h2 style="color:red;">About Me</h2>
+    <p style="color:white;">I am Austin Dart. I am a Java developer who has spent much of my time making Bukkit/Spigot plugins. I am now beginning my journey as a web developer, 
         hoping to learn HTML, CSS, and JavaScript. This website is going to be the project by which I (and you) can see my progress. Here's a picture of my face:<br>
         <img src="images/selfie.jpg" width="132" height="256"><br>
 		Please note that while the code for this website is licensed under the Unlicense (that is, it is essentially within the public domain), the photo is NOT. I own 
 		this photograph and it is not to be used by anyone else (not really sure why you would want to, either).
     </p>
-    <h2 style="color:red; text-align:center;">Source Code</h2>
-    <p style="color:white; text-align:center;">The source code for this website is (and always will be) publicly available. Right now, it is available at 
+    <h2 style="color:red;">Source Code</h2>
+    <p style="color:white;">The source code for this website is (and always will be) publicly available. Right now, it is available at 
         <a href="https://github.com/AustinDart/Making-A-Website">https://github.com/AustinDart/Making-A-Website</a>
     </p>
 </body>
