Add subscript, superscript, etc.

--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,9 @@
     <p style="color:white;">The source code for this website is (and always will be) publicly available. Right now, it is available at 
         <a href="https://github.com/AustinDart/Making-A-Website">https://github.com/AustinDart/Making-A-Website</a>
     </p>
+    <h2 style="color:red;">Math & Science Things</h2>
+    <p style="color:white;">In order to demonstrate various HTML tags, I'm going to be utilizing <b><i>MATH & SCIENCE</i></b><br>
+        2<sup>2</sup> = 4<br>
+        H<sub>2</sub>O is <del>lava</del> <ins>water</ins></p>
 </body>
 </html>
