--- a/src/index.html
+++ b/src/index.html
@@ -2,23 +2,29 @@
 <head>
     <title>Austin Dart - Making A Website</title>
 </head>
-<body style="background-color:black; text-align:center;">
-    <h1 style="color:white;">Making A Website</h1>
-    <h2 style="color:red;">Brief Greeting</h2>
-    <p style="color:white;">Hello, GitHub! I am learning to make a website! Please enjoy watching this grow into a functional website.</p>
-    <h2 style="color:red;">About Me</h2>
-    <p style="color:white;">I am Austin Dart. I am a Java developer who has spent much of my time making Bukkit/Spigot plugins. I am now beginning my journey as a web developer, 
+<style>
+    body {background-color:black; text-align:center;}
+    h1 {color:white;}
+    h2 {color:red;}
+    p {color:white;}
+</style>
+<body>
+    <h1>Making A Website</h1>
+    <h2>Brief Greeting</h2>
+    <p>Hello, GitHub! I am learning to make a website! Please enjoy watching this grow into a functional website.</p>
+    <h2>About Me</h2>
+    <p>I am Austin Dart. I am a Java developer who has spent much of my time making Bukkit/Spigot plugins. I am now beginning my journey as a web developer, 
         hoping to learn HTML, CSS, and JavaScript. This website is going to be the project by which I (and you) can see my progress. Here's a picture of my face:<br>
         <img src="images/selfie.jpg" width="132" height="256"><br>
 		Please note that while the code for this website is licensed under the Unlicense (that is, it is essentially within the public domain), the photo is NOT. I own 
 		this photograph and it is not to be used by anyone else (not really sure why you would want to, either).
     </p>
-    <h2 style="color:red;">Source Code</h2>
-    <p style="color:white;">The source code for this website is (and always will be) publicly available. Right now, it is available at 
+    <h2>Source Code</h2>
+    <p>The source code for this website is (and always will be) publicly available. Right now, it is available at 
         <a href="https://github.com/AustinDart/Making-A-Website">https://github.com/AustinDart/Making-A-Website</a>
     </p>
-    <h2 style="color:red;">Math & Science Things</h2>
-    <p style="color:white;">In order to demonstrate various HTML tags, I'm going to be utilizing <b><i>MATH & SCIENCE</i></b><br>
+    <h2>Math & Science Things</h2>
+    <p>In order to demonstrate various HTML tags, I'm going to be utilizing <b><i>MATH & SCIENCE</i></b><br>
         2<sup>2</sup> = 4<br>
         H<sub>2</sub>O is <del>lava</del> <ins>water</ins></p>
 </body>
