Open link in new tab

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     </p>
     <h2>Source Code</h2>
     <p>The source code for this website is (and always will be) publicly available. Right now, it is available at 
-        <a href="https://github.com/AustinDart/Making-A-Website">https://github.com/AustinDart/Making-A-Website</a>
+        <a href="https://github.com/AustinDart/Making-A-Website" target="_blank">https://github.com/AustinDart/Making-A-Website</a>
     </p>
     <h2>Math & Science Things</h2>
     <p>In order to demonstrate various HTML tags, I'm going to be utilizing <b><i>MATH & SCIENCE</i></b><br>
