--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Austin Dart - Making A Website</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <style>
     body {background-color:black; text-align:center;}
@@ -15,7 +16,7 @@
     <h2>About Me</h2>
     <p>I am Austin Dart. I am a Java developer who has spent much of my time making Bukkit/Spigot plugins. I am now beginning my journey as a web developer, 
         hoping to learn HTML, CSS, and JavaScript. This website is going to be the project by which I (and you) can see my progress. Here's a picture of my face:<br>
-        <img src="images/selfie.jpg" width="132" height="256"><br>
+        <img src="images/selfie.jpg" style="width:132px;height:256px;" alt="A picture of my face"><br>
 		Please note that while the code for this website is licensed under the Unlicense (that is, it is essentially within the public domain), the photo is NOT. I own 
 		this photograph and it is not to be used by anyone else (not really sure why you would want to, either).
     </p>
