--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     h1 {color:white;}
     h2 {color:red;}
     p {color:white;}
+    table {color:white; border:1px solid white; border-color:white; margin: 0px auto; }
+    th, td, tr {color:white; border:1px solid white;}
 </style>
 <body>
     <h1>Making A Website</h1>
@@ -28,5 +30,28 @@
     <p>In order to demonstrate various HTML tags, I'm going to be utilizing <b><i>MATH & SCIENCE</i></b><br>
         2<sup>2</sup> = 4<br>
         H<sub>2</sub>O is <del>lava</del> <ins>water</ins></p>
+    <h2>Some Random Data</h2>
+    <table>
+        <tr>
+            <th>Trial Number</th>
+            <th>Time</th>
+            <th>Distance</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>1.3s</td>
+            <td>2.4m</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>1.2s</td>
+            <td>2.5m</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>1.3s</td>
+            <td>2.3m</td>
+        </tr>
+    </table>
 </body>
 </html>
