--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+<html lang="en-us">
 <head>
+    <meta charset="UTF-8" />
     <title>Austin Dart - Making A Website</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
